fix: Overflow-y remove (#162)
* build: Remove momentjs

* fix: Post interface

* fix: Background colors

* fix: Router links and image urls

* fix: Fix Posts module

* fix: Featured posts image and name

* fix: Remove overflow-y

* fix: Under maintenance for undone pages

--- a/src/app/modules/misc/components/documents/documents.component.css
+++ b/src/app/modules/misc/components/documents/documents.component.css
@@ -1,7 +1,3 @@
-:host {
-  overflow-y: scroll;
-}
-
 .container {
   max-width: 1200px;
   padding: 0 20px;
@@ -15,7 +11,7 @@
   box-shadow: 0 3px 5px 0 rgba(0,1,1,.1);
   padding: 40px 40px 48px;
   margin-top: 20px;
-  
+
 }
 
 h2 {
